# ferramentas_osint

./: .gitignore  KNOW_ISSUES.txt  README.MD  ROADMAP.txt  attackaudit.py  caacheck.py  configfiledetect.py  cred.py  darkwebmonitor.py  dirscanner.py  dnshistory.py  dnsrebinding.py  dnstransfer.py  dnswatorture.py  emailspoof.py  emailtemplateinject.py  googledorking.py  graphqlplayground.py  ipasninfo.py  main.py  net.py  nsecwalking.py  openapidiscovery.py  portscanner.py  pyproject.toml  reconall.py  setup.ps1  setup.sh  smtpdowngrade.py  smtpinjection.py  socialengrecon.py  sourcemapdiscovery.py  subdomainenum.py  techfingerprint.py  utils.py  vcsleak.py  webrecon.py  whoishistory.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  opencode.yml
src/mytools/core/: main.py  reconall.py
src/mytools/email/: emailaddressbypass.py  emailattachmentbypass.py  emaillinktracking.py
src/mytools/network/: dirscanner.py
src/mytools/web/: bominjection.py  cachepoisoning.py  casevariationbypass.py  charsetbypass.py  crlfinjection.py  nosqliinject.py  nullbyteinject.py  openredirect.py  overlongencoding.py  pathtraversal.py  rtloverride.py  xxedetect.py
tests/: conftest.py  test_attackaudit.py  test_backupfiledetect.py  test_caacheck.py  test_configfiledetect.py  test_cred.py  test_darkwebmonitor.py  test_dirscanner.py  test_dnshistory.py  test_dnsrebinding.py  test_dnstransfer.py  test_dnswatorture.py  test_emailspoof.py  test_emailtemplateinject.py  test_googledorking.py  test_graphqlplayground.py  test_ipasninfo.py  test_net.py  test_nsecwalking.py  test_openapidiscovery.py  test_portscanner.py  test_reconall.py  test_smtpdowngrade.py  test_smtpinjection.py  test_socialengrecon.py  test_sourcemapdiscovery.py  test_subdomainenum.py  test_techfingerprint.py  test_utils.py  test_vcsleak.py  test_webrecon.py  test_whoishistory.py
tests/email/: test_emailaddressbypass.py  test_emailattachmentbypass.py  test_emaillinktracking.py
tests/network/: test_dirscanner.py
tests/web/: test_bominjection.py  test_cachepoisoning.py  test_casevariationbypass.py  test_charsetbypass.py  test_crlfinjection.py  test_nosqliinject.py  test_nullbyteinject.py  test_openredirect.py  test_overlongencoding.py  test_pathtraversal.py  test_rtloverride.py  test_xxedetect.py
