[tool.poetry]
name = "mytools"
version = "3.2.0"
description = "Suite de ferramentas de auditoria e reconhecimento web/network"
authors = ["nxt"]
readme = "README.MD"
packages = [{include = "*.py"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
httpx = ">=0.28.1"
beautifulsoup4 = ">=4.15.0"
python-whois = ">=0.9.6"
dnspython = ">=2.8.0"
pyreadline3 = {version = ">=3.5.6", markers = "sys_platform == 'win32'"}

[tool.poetry.group.dev.dependencies]
pytest = ">=9.1.1"
respx = ">=0.23.1"
pytest-asyncio = ">=1.4.0"
ruff = ">=0.15.18"
basedpyright = ">=1.39.8"

[tool.poetry.scripts]
mytools = "main:main"
mytools-cred = "cred:main"
mytools-port = "portscanner:main"
mytools-dir = "dirscanner:main"
mytools-recon = "webrecon:main"
mytools-audit = "attackaudit:main"
mytools-dnsxfer = "dnstransfer:main"
mytools-subenum = "subdomainenum:main"
mytools-dnshistory = "dnshistory:main"
mytools-whoishistory = "whoishistory:main"
mytools-ipasn = "ipasninfo:main"
mytools-techfp = "techfingerprint:main"
mytools-oas = "openapidiscovery:main"
mytools-gql = "graphqlplayground:main"
mytools-reconall = "reconall:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = ["real_sleep: teste que precisa de asyncio.sleep real ( nao mockado )"]

[tool.ruff]
target-version = "py310"
line-length = 160

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.basedpyright]
pythonVersion = "3.10"
exclude = ["**/__pycache__", "**/node_modules", ".git", ".venv", "tests"]
typeCheckingMode = "standard"
reportMissingImports = false
reportMissingTypeStubs = false
reportUnnecessaryTypeIgnoreComment = false
useLibraryCodeForTypes = true
