[tool.poetry]
name = "mytools"
version = "3.2.0"
description = "Suite de ferramentas de auditoria e reconhecimento web/network"
authors = ["nxt"]
readme = "README.MD"
packages = [{include = "mytools", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.14,<3.16"
httpx = ">=0.28.1"
beautifulsoup4 = ">=4.15.0"
python-whois = ">=0.9.6"
dnspython = ">=2.8.0"
pyyaml = ">=6.0.3"
pyreadline3 = {version = ">=3.5.6", markers = "sys_platform == 'win32'"}

[tool.poetry.group.dev.dependencies]
pytest = ">=9.1.1"
respx = ">=0.23.1"
pytest-asyncio = ">=1.4.0"
ruff = ">=0.15.20"
basedpyright = ">=1.39.8"

[tool.poetry.scripts]
mytools = "mytools.core.main:main"
mytools-cred = "mytools.core.cred:main"
mytools-port = "mytools.network.portscanner:main"
mytools-dir = "mytools.network.dirscanner:main"
mytools-recon = "mytools.web.webrecon:main"
mytools-audit = "mytools.web.attackaudit:main"
mytools-dnsxfer = "mytools.dns.dnstransfer:main"
mytools-subenum = "mytools.dns.subdomainenum:main"
mytools-dnshistory = "mytools.dns.dnshistory:main"
mytools-whoishistory = "mytools.whois.whoishistory:main"
mytools-ipasn = "mytools.osint.ipasninfo:main"
mytools-techfp = "mytools.web.techfingerprint:main"
mytools-oas = "mytools.web.openapidiscovery:main"
mytools-gql = "mytools.web.graphqlplayground:main"
mytools-sm = "mytools.web.sourcemapdiscovery:main"
mytools-vcs = "mytools.vcs.vcsleak:main"
mytools-cfg = "mytools.config.configfiledetect:main"
mytools-bak = "mytools.config.backupfiledetect:main"
mytools-dork = "mytools.osint.googledorking:main"
mytools-breach = "mytools.osint.emailbreachcheck:main"
mytools-soceng = "mytools.osint.socialengrecon:main"
mytools-leak = "mytools.osint.pasteleak:main"
mytools-dark = "mytools.osint.darkwebmonitor:main"
mytools-rebind = "mytools.dns.dnsrebinding:main"
mytools-dwt = "mytools.dns.dnswatorture:main"
mytools-amp = "mytools.dns.dnsamplification:main"
mytools-tunnel = "mytools.dns.dnstunnel:main"
mytools-dnssec = "mytools.dns.dnssecvalidation:main"
mytools-nsec = "mytools.dns.nsecwalking:main"
mytools-caa = "mytools.dns.caacheck:main"
mytools-secemail = "mytools.email.emailsecurity:main"
mytools-spoof = "mytools.email.emailspoof:main"
mytools-smtpinject = "mytools.email.smtpinjection:main"
mytools-smtpdown = "mytools.email.smtpdowngrade:main"
mytools-templeti = "mytools.email.emailtemplateinject:main"
mytools-attachbypass = "mytools.email.emailattachmentbypass:main"
mytools-addrbypass = "mytools.email.emailaddressbypass:main"
mytools-linktrack = "mytools.email.emaillinktracking:main"
mytools-nullbyte = "mytools.web.nullbyteinject:main"
mytools-reconall = "mytools.core.reconall:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = ["real_sleep: teste que precisa de asyncio.sleep real ( nao mockado )"]

[tool.ruff]
target-version = "py314"
line-length = 160

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.basedpyright]
pythonVersion = "3.14"
exclude = ["**/__pycache__", "**/node_modules", ".git", ".venv", "tests"]
typeCheckingMode = "standard"
reportMissingImports = false
reportMissingTypeStubs = false
reportUnnecessaryTypeIgnoreComment = false
useLibraryCodeForTypes = true
